--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
                 "description": "Enable logging of the Debug Adapter Protocol",
                 "default": false
               },
-              "fastLoad": {
-                "type": "boolean",
-                "description": "Use fast loading mode that bypasses floppy emulation and directly injects program into memory",
-                "default": false
+              "snapshot": {
+                "type": "string",
+                "description": "Inject program directly into memory from starting vAmiga snapshot",
+                "default": null
               }
             }
           }
