--- a/package.json
+++ b/package.json
@@ -147,23 +147,23 @@
     "format:check": "prettier --check src/**/*.ts"
   },
   "dependencies": {
-    "@vscode/debugadapter": "^1.64.0",
+    "@vscode/debugadapter": "^1.68.0",
     "expr-eval": "^2.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.36.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "24.3.1",
-    "@types/sinon": "^17.0.3",
-    "@types/vscode": "^1.74.0",
-    "@typescript-eslint/eslint-plugin": "8.43.0",
-    "@typescript-eslint/parser": "8.43.0",
-    "@vscode/test-cli": "0.0.11",
-    "@vscode/test-electron": "^2.3.8",
-    "eslint": "9.35.0",
+    "@types/node": "^24.5.2",
+    "@types/sinon": "^17.0.4",
+    "@types/vscode": "^1.104.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.36.0",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
-    "sinon": "^18.0.1",
+    "sinon": "^21.0.0",
     "ts-jest": "^29.4.4",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0"
