--- a/package.json
+++ b/package.json
@@ -152,11 +152,12 @@
   },
   "dependencies": {
     "@vscode/debugadapter": "^1.68.0",
+    "deasync": "^0.1.30",
     "expr-eval": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "esbuild": "^0.21.5",
+    "@types/deasync": "^0.1.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/sinon": "^17.0.4",
@@ -165,6 +166,7 @@
     "@typescript-eslint/parser": "^8.43.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
@@ -176,7 +178,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/test/**/*.test.ts"],
+    "testMatch": [
+      "**/test/**/*.test.ts"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "extension.test.ts",
@@ -186,7 +190,9 @@
       "src/**/*.ts",
       "!src/test/**/*"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/src/test/jestSetup.ts"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/test/jestSetup.ts"
+    ]
   },
   "author": "",
   "license": "ISC"
