--- a/package.json
+++ b/package.json
@@ -111,91 +111,95 @@
               "emulatorOptions": {
                 "type": "object",
                 "properties": {
-                  "navbar": {
-                    "type": "boolean",
-                    "description": "Navbar initially visible"
+                  "programPath": {
+                    "type": "string",
+                    "description": "Path to the Amiga program to run"
                   },
-                  "wide": {
+                  "kickstartRomPath": {
+                    "type": "string",
+                    "description": "Path to kickstart ROM file"
+                  },
+                  "kickstartExtPath": {
+                    "type": "string",
+                    "description": "Path to extended kickstart ROM file"
+                  },
+                  "useArosRom": {
+                    "type": "boolean",
+                    "description": "Use free AROS ROMs"
+                  },
+                  "showNavBar": {
+                    "type": "boolean",
+                    "description": "Show navigation bar"
+                  },
+                  "wideScreen": {
                     "type": "boolean",
                     "description": "Stretch to full width, regardless of aspect ratio"
                   },
-                  "dark": {
+                  "darkMode": {
                     "type": "boolean",
                     "description": "Dark mode"
                   },
-                  "mouse": {
+                  "enableMouse": {
                     "type": "boolean",
                     "description": "Enable mouse"
                   },
-                  "display": {
+                  "displayZoom": {
                     "type": "string",
                     "enum": [
                       "viewport tracking", "borderless", "narrow", "standard", "wider", "overscan", "extreme"
                     ],
-                    "description": "Display overscan mode"
+                    "description": "Display zoom mode"
                   },
-                  "gpu": {
+                  "useGpu": {
                     "type": "boolean",
                     "description": "Render with GPU, rather than software"
                   },
-                  "kickstartRomPath": {
-                    "type": "string",
-                    "description": "Local path to kickstart ROM"
-                  },
-                  "kickstartExtPath": {
-                    "type": "string",
-                    "description": "Local path to extended kickstart ROM"
-                  },
-                  "AROS": {
-                    "type": "boolean",
-                    "description": "Use free AROS ROMs"
-                  },
-                  "agnus_revision": {
+                  "agnusRevision": {
                     "type": "string",
                     "enum": ["OCS_OLD", "OCS", "ECS_1MB", "ECS_2MB"],
-                    "description": "Agnus chip revision (OCS_OLD: A1000/Early A2000, OCS: Early A500/A2000, ECS_1MB: Later A500/A2000, ECS_2MB: A500+/A600)"
+                    "description": "Agnus chip revision"
                   },
-                  "denise_revision": {
+                  "deniseRevision": {
                     "type": "string",
                     "enum": ["OCS", "ECS"],
                     "description": "Denise chip revision"
                   },
-                  "cpu_revision": {
-                    "type": "number",
-                    "enum": [0, 1, 2, 4],
-                    "description": "CPU model (0: 68000, 1: 68010, 2: 68020, 4: fake 68030)"
-                  },
-                  "cpu_overclocking": {
-                    "type": "number",
-                    "enum": [0, 2, 3, 4, 5, 6, 8, 12, 14],
-                    "description": "CPU speed multiplier (0: 7.09MHz stock, 14: ~100MHz)"
-                  },
-                  "chip_ram": {
-                    "type": "number",
-                    "enum": [256, 512, 1024, 2048],
-                    "description": "Chip RAM in KB"
-                  },
-                  "slow_ram": {
-                    "type": "number",
-                    "enum": [0, 256, 512],
-                    "description": "Slow RAM in KB"
-                  },
-                  "fast_ram": {
-                    "type": "number",
-                    "enum": [0, 256, 512, 1024, 2048, 8192],
-                    "description": "Fast RAM in KB"
-                  },
-                  "blitter_accuracy": {
+                  "cpuRevision": {
                     "type": "string",
-                    "enum": ["0", "1", "2"],
+                    "enum": ["68000", "68010", "68020", "fake_68030"],
+                    "description": "CPU model"
+                  },
+                  "cpuSpeed": {
+                    "type": "string",
+                    "enum": ["7MHz", "14Hz", "21Hz", "28Hz", "35Hz", "43Hz", "57Hz", "85Hz", "99Hz"],
+                    "description": "CPU speed"
+                  },
+                  "chipRam": {
+                    "type": "string",
+                    "enum": ["256k", "512k", "1M", "2M"],
+                    "description": "Chip RAM size"
+                  },
+                  "slowRam": {
+                    "type": "string",
+                    "enum": ["0", "256k", "512k"],
+                    "description": "Slow RAM size"
+                  },
+                  "fastRam": {
+                    "type": "string",
+                    "enum": ["0", "256k", "512k", "1M", "2M", "8M"],
+                    "description": "Fast RAM size"
+                  },
+                  "blitterAccuracy": {
+                    "type": "number",
+                    "enum": [0, 1, 2],
                     "description": "Blitter accuracy level"
                   },
-                  "floppy_drive_count": {
+                  "floppyDriveCount": {
                     "type": "number",
                     "enum": [1, 2, 3, 4],
                     "description": "Number of floppy drives"
                   },
-                  "drive_speed": {
+                  "driveSpeed": {
                     "type": "number",
                     "enum": [-1, 1, 2, 4, 8],
                     "description": "Floppy drive speed multiplier (-1: auto)"
