--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "isolatedModules": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "out"]
+  "exclude": ["node_modules", "out", "src/webview"]
 }
