--- a/package.json
+++ b/package.json
@@ -42,6 +42,16 @@
       }
     ],
     "menus": {
+      "commandPalette": [
+        {
+          "command": "vamiga-debugger.openMemoryViewer",
+          "when": "debugType == 'vamiga'"
+        },
+        {
+          "command": "vamiga-debugger.viewVariableInMemory",
+          "when": "false"
+        }
+      ],
       "debug/toolBar": [
         {
           "command": "vamiga-debugger.eof",
