--- a/package.json
+++ b/package.json
@@ -342,6 +342,7 @@
   },
   "dependencies": {
     "@vscode/debugadapter": "^1.68.0",
+    "downshift": "^9.0.10",
     "expr-eval": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
