--- a/package.json
+++ b/package.json
@@ -363,6 +363,8 @@
     "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
     "sinon": "^21.0.0",
