--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,5 @@
     "isolatedModules": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "out", "src/webview"],
-  "references": [
-    { "path": "./src/webview" }
-  ]
+  "exclude": ["node_modules", "out", "src/webview"]
 }
